# spatial_statistics_course

./: .gitignore  README.md  pyproject.toml
classes/: geospatial_with_python_2.ipynb  geospatial_with_python_3.ipynb  introduction.ipynb  introduction_to_geospatial.ipynb  regression_with_python.ipynb  solution_exercicie_bank.ipynb
classes/regression/: airbnb.ipynb
data/: mapeado.csv  nbi_x_comuna.csv
data/airbnb/: neighbourhoods.geojson
data/exercises/bank_location/: addresses.txt
data/health/: presion.csv
data/introduction/: Inflacion.xlsx  titanic.xlsx
data/seeds/: semillas.csv
