[tool.poetry]
name = "spatial-statistics-course"
version = "0.0.1"
description = "Spatial Statistics Course"
authors = ["Douglas Carmona <douglas.albertocg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
geopandas = "^0.14.4"
shapely = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
