[tool.poetry]
name = "spatial-statistics-course"
version = "0.0.1"
description = "Spatial Statistics Course"
authors = ["Douglas Carmona <douglas.albertocg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
geopandas = "^0.14.4"
shapely = "^2.0.4"
scipy = "^1.13.1"
geopy = "^2.4.1"
mapclassify = "^2.6.1"
pysal = "^24.1"
contextily = "^1.6.0"
openpyxl = "^3.1.4"
pydataset = "^0.2.0"
plotly = "^5.22.0"
osmnx = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
